Fix header toggle labels being cut off in IE11 (#543)
* Fix header toggle labels and icons being cut off in IE11

* Fixed modal social menu overflowing its bounds in IE11

* Fixed the modal social menu being incorrectly aligned on tablet and up

Fixes #348

--- a/style.css
+++ b/style.css
@@ -1709,6 +1709,7 @@ body:not(.enable-search-modal) .site-logo img {
 	align-items: center;
 	display: flex;
 	outline: none;
+	overflow: visible;
 	padding: 0 2rem;
 }
 
@@ -1725,6 +1726,10 @@ body:not(.enable-search-modal) .site-logo img {
 .toggle-inner {
 	height: 2.3rem;
 	position: relative;
+}
+
+.toggle-icon {
+	overflow: hidden;
 }
 
 .toggle-inner .toggle-text {
@@ -1755,8 +1760,10 @@ body:not(.enable-search-modal) .site-logo img {
 	top: 0;
 }
 
+.search-toggle .toggle-icon,
 .search-toggle svg {
 	height: 2.3rem;
+	max-width: 2.3rem;
 	width: 2.3rem;
 }
 
@@ -1775,8 +1782,9 @@ body:not(.enable-search-modal) .site-logo img {
 	width: 6.6rem;
 }
 
+.nav-toggle .toggle-icon,
 .nav-toggle svg {
-	height: 0.7rem;
+	height: 0.8rem;
 	width: 2.6rem;
 }
 
@@ -2138,6 +2146,10 @@ button.sub-menu-toggle.active svg {
 .menu-bottom {
 	flex-shrink: 0;
 	padding: 4rem 0;
+}
+
+.menu-bottom nav {
+	width: 100%;
 }
 
 .menu-copyright {
@@ -4555,10 +4567,6 @@ a.to-the-top > * {
 		margin-right: 4rem;
 	}
 
-	.menu-bottom .social-menu {
-		justify-content: flex-end;
-	}
-
 	/* Modal Search Form ------------------------- */
 
 	.modal-search-form {
@@ -5309,6 +5317,10 @@ a.to-the-top > * {
 
 	.menu-bottom {
 		padding: 6rem 0;
+	}
+
+	.menu-bottom .social-menu {
+		justify-content: flex-start;
 	}
 
 	/* Sub Page ------------------------------ */
